Fix background gradient visibility

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: var(--color-paradex-bg);
+  /* background-color: var(--color-paradex-bg); */
   color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
